# walking_city

./: CMakeLists.txt  LICENSE  LICENSE-etc  walking_city
include/glad/: glad.h
include/noka/: mesh.h  model.h  shader.h
src/: glad.c  main.cpp
src/shader/: frag.glsl
